# constellation-vision

./: .gitignore  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  improve.yml
artifacts/: EVAL.md  data_stats.json  history.jsonl  metrics.json
configs/: train.default.env  train.large.env
docs/: architecture.md  assumptions.md
src/constellation_vision/: __init__.py  config.py  schema.py  train.py
src/constellation_vision/data/: drift.py  generate.py
src/constellation_vision/enrich/: argus_enrich.py
src/constellation_vision/eval/: harness.py  metrics.py  report.py
src/constellation_vision/model/: export_onnx.py  unet.py
src/constellation_vision/model/weights/: segmenter.onnx
tests/: test_drift.py  test_enrich.py  test_generate.py  test_metrics.py  test_pipeline_torch.py  test_report.py  test_report_write.py
